<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.quarkiverse</groupId>
    <artifactId>quarkiverse-parent</artifactId>
    <version>15</version>
  </parent>
  <groupId>io.quarkiverse.amazonservices</groupId>
  <artifactId>quarkus-amazon-services-parent</artifactId>
  <version>999-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Quarkus - Amazon Services - Parent</name>
  <modules>
    <module>bom</module>
    <module>build-parent</module>
    <module>crt</module>
    <module>common</module>
    <module>devservices</module>
    <module>cognito-user-pools</module>
    <module>dynamodb</module>
    <module>dynamodb-enhanced</module>
    <module>eventbridge</module>
    <module>iam</module>
    <module>kinesis</module>
    <module>kms</module>
    <module>lambda</module>
    <module>s3</module>
    <module>secretsmanager</module>
    <module>ses</module>
    <module>sfn</module>
    <module>sns</module>
    <module>sqs</module>
    <module>ssm</module>
    <module>sts</module>
    <module>docs</module>
    <module>integration-tests</module>
  </modules>
  <scm>
    <connection>:git:git@github.com:quarkiverse/quarkus-amazon-services.git</connection>
    <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-amazon-services.git</developerConnection>
    <url>https://github.com/quarkiverse/quarkus-amazon-services</url>
    <tag>HEAD</tag>
  </scm>
  <properties>
    <compiler-plugin.version>3.11.0</compiler-plugin.version>
    <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <quarkus.version>3.6.5</quarkus.version>
    <awssdk.version>2.23.0</awssdk.version>
    <awscrt.version>0.29.8</awscrt.version>
    <awsotel.version>1.32.0-alpha</awsotel.version>
  </properties>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
        </plugin>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-extension-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
          <executions>
            <execution>
              <phase>compile</phase>
              <goals>
                <goal>extension-descriptor</goal>
              </goals>
              <configuration>
                <deployment>${project.groupId}:${project.artifactId}-deployment:${project.version}</deployment>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
